# everaccess

./: .gitignore  Dockerfile.yaml  README.md  demo.md  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  context.txt  elicitation.txt  implementation.md  pyproject.toml  schema.txt  seed.py  start.sh  update.md
backend/src/: dependencies.py  main.py
backend/src/database/models/: __init__.py  access_log.py  access_rule.py  admin_user.py  asset.py  asset_file.py  beneficiary.py  crypto_allocation.py  crypto_asset.py  encryption_key.py  notification.py  partner.py  partner_client.py  payment.py  subscription.py  user.py  user_message.py  verification_document.py  verification_request.py
backend/src/routes/: admin.py  assets.py  auth.py  beneficiaries.py  beneficiary_portal.py  crypto.py  messages.py  users.py  verifications.py
backend/src/schemas/: admin.py  asset.py  beneficiary.py  crypto.py  user.py  user_message.py  verification.py
backend/src/services/: admin_service.py  asset_service.py  beneficiary_service.py  crypto_service.py  message_service.py  user_service.py  verification_service.py
backend/src/utils/: security.py
frontend/: .gitignore  API_DOCUMENTATION.md  impl.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/assets/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
(+11 files in other folders)
