[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "everaccess"
version = "0.0.1"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pymysql",
    "python-dotenv",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "stripe",
    "email-validator",
    "python-multipart"
]
